# routes/index.js
@@ -1,17 +1,37 @@
 const routes = require('express').Router();
+const passport = require('../middleware/passport');
+
 const area = require('./area');
 const reservation = require('./reservation');
 const calendar = require('./calendar');
 const user = require('./user');
 const swagger = require('./swagger');
 
-// main modules
-routes.use('/reservation', reservation);
-routes.use('/area', area);
-routes.use('/calendar', calendar);
-routes.use('/user', user);
+// Google Oatuh routes
+routes.get(
+  '/auth/google',
+  passport.authenticate('google', { scope: ['profile', 'email'] })
+);
 
-// Home Route 
+routes.get(
+  '/google/callback',
+  passport.authenticate('google', {
+    failureRedirect: '/api-docs',
+    session: false,
+  }),
+  (req, res) => {
+    req.session.user = req.user; 
+    res.redirect('/'); 
+  }
+);
+
+routes.get('/logout', (req, res) => {
+  req.session.destroy(() => {
+    res.json({ message: 'Logged out' });
+  });
+});
+
+// Home Route
 routes.get('/',
   // #swagger.ignore = true
   (req, res) => {
@@ -25,28 +45,43 @@ routes.get('/',
       </p>
 
       <ul style="font-family: Arial; color: #555; line-height: 1.6;">
-        <li><strong>Users</strong> Resident and admin accounts.  
-            Go to <a href="/user">/user</a>
+        <li><strong>Users</strong> Resident and admin accounts. Go to <a href="/user">/user</a>
         </li>
 
-        <li><strong>Areas</strong> Community areas available for reservation.  
-            Go to <a href="/area">/area</a>
+        <li><strong>Areas</strong> Community areas available for reservation. Go to <a href="/area">/area</a>
         </li>
 
-        <li><strong>Reservations</strong> Requests, approvals, and cancellations.  
-            Go to <a href="/reservation">/reservation</a>
+        <li><strong>Reservations</strong> Requests, approvals, and cancellations. Go to <a href="/reservation">/reservation</a>
         </li>
 
-        <li><strong>Calendar</strong> Blocked days, available schedules.  
-            Go to <a href="/calendar">/calendar</a>
+        <li><strong>Calendar</strong> Blocked days, available schedules. Go to <a href="/calendar">/calendar</a>
         </li>
       </ul>
 
       <p style="font-family: Arial; color: #555;">
         Enter <a href="/api-docs">/api-docs</a> to view the complete API documentation.
       </p>
+
+      <hr />
+
+      <h3 style="font-family: Arial; color: #333;">Authentication</h3>
+
+      <p style="font-family: Arial; color: #555;">
+        <a href="/auth/google"
+           style="font-size: 18px; padding: 8px 14px;
+                  background:#4285F4; color:white;
+                  border-radius:4px; text-decoration:none;">
+          Login with Google
+        </a>
+      </p>
     `);
 });
+
+// main modules
+routes.use('/reservation', reservation);
+routes.use('/area', area);
+routes.use('/calendar', calendar);
+routes.use('/user', user);
 
 // swagger route
 routes.use('/api-docs', swagger);
